[gd_scene load_steps=5 format=3 uid="uid://c3rr1wfs5rs8"]

[ext_resource type="Script" path="res://Player/Attack/javelin.gd" id="1_c14h8"]
[ext_resource type="Texture2D" uid="uid://bes4sad22ly5" path="res://Textures/Items/Weapons/javelin_3_new.png" id="1_ya257"]
[ext_resource type="AudioStream" uid="uid://cet5npskfdinp" path="res://Audio/SoundEffect/woosh.wav" id="3_8s2kr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvl8f"]
size = Vector2(2.82843, 34.6482)

[node name="Javelin" type="Area2D"]
script = ExtResource("1_c14h8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ya257")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.25, 0.25)
rotation = -0.785398
shape = SubResource("RectangleShape2D_kvl8f")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true
autostart = true

[node name="ChangeDirection" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ResetPosTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="snd_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8s2kr")
volume_db = -10.0
pitch_scale = 0.7

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
